fix mixins file connection

--- a/src/scss/libs/bootstrap/_bootstrap.scss
+++ b/src/scss/libs/bootstrap/_bootstrap.scss
@@ -5,7 +5,7 @@
 @import 'customizer-bootstrap';
 
 // bootstrap
-@import "mixins";
+@import "../../../../node_modules/bootstrap/scss/mixins";
 @import "root";
 @import "reboot";
 @import "type";
