--- a/src/scss/libs/fontawesome/_fontawesome5.scss
+++ b/src/scss/libs/fontawesome/_fontawesome5.scss
@@ -2,7 +2,18 @@
 // custom variables (copied from fontawesome _variables.scss)
 @import 'customizer-fontawesome';
 
-@import 'fontawesome';
+@import '../../../../node_modules/@fortawesome/fontawesome-free/scss/mixins';
+@import 'core';
+@import 'larger';
+@import 'fixed-width';
+@import 'list';
+@import 'bordered-pulled';
+@import 'animated';
+@import 'rotated-flipped';
+@import 'stacked';
+@import 'icons';
+@import 'screen-reader';
+
 @import 'solid';
 @import 'brands';
 @import 'regular';
